[tool.poetry]
name = "grapycal-torch"
version = "0.1.0"
description = "A Grapycal extension for PyTorch"
authors = ["eri24816 <a931eric@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
torchvision = "^0.16.1"
grapycal = ">=0.6.1"
einops = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
